--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "pg": "^8.8.0",
     "pg-pool": "^3.5.2"
   },
