--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rest-api",
+  "name": "Sistema_Academico_API",
   "version": "1.0.0",
-  "description": "Teste de REST API para tutorial do youtube",
+  "description": "Mini aplicação de notas usando REST API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,9 +27,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "pg": "^8.8.0",
-    "pg-pool": "^3.5.2"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
